fix: wrap student-container and message-container

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -15,33 +15,26 @@ html, body {
     height: 100vh;
     padding: 5%;
     margin: 0 auto;
-
 }
 
 .main-content {
     overflow-y: scroll;
-    width: 100%;
-    height: 100%;
     flex: 1;
     display: flex;
     flex-direction: column;
     overflow: hidden;
     background-color: #fff;
-    box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.25);
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
     margin: 0 auto;
 }
 /* student-container */
 .student-container {
     background: linear-gradient(#FFFFFF, 40%, #E6E8EB);
     text-align: center;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
     margin: 0 auto 0 auto;
     padding: 10px;
     width: 100%;
-    box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 .name{
     font-size: 14px;
